# FaceVision_AI

./: .env  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
ai_service/: db.sqlite3
ai_service/ai_service/: settings.py  urls.py
ai_service/api/: urls.py  views.py
backend/: db.sqlite3
backend/api/: urls.py  views.py
backend/dashboard/: urls.py  views.py
backend/main/: settings.py  urls.py
backend/static/css/: style.css
backend/static/js/: app.js
backend/templates/: live_camera.html
